# learn-opengl

./: .gitignore  CMakeLists.txt
libraries/GLAD/include/glad/: glad.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: glad.c  main.cpp  shader.cpp  shader.h  util.h
src/classes/: camera.hpp  shader.cpp  shader.h  texture.hpp
src/models/: cube_model.hpp
src/shader/: shader.cpp  shader.h
src/shaders/default/: fragment.glsl  vertex.glsl
src/shaders/test/: vertex.glsl
